// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component check Cell renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-trmxpy"
    data-testid="1,1"
    role="cell"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 2`] = `
<DocumentFragment>
  <div
    class="css-lnvx7y"
    data-testid="1,1"
    role="cell"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 3`] = `
<DocumentFragment>
  <div
    class="css-ri1y6t"
    data-testid="1,1"
    role="cell"
  >
    2
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 4`] = `
<DocumentFragment>
  <div
    class="css-15lcf1p"
    data-testid="1,1"
    role="cell"
  >
    3
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 5`] = `
<DocumentFragment>
  <div
    class="css-1iaiuzg"
    data-testid="1,1"
    role="cell"
  >
    4
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 6`] = `
<DocumentFragment>
  <div
    class="css-104so0k"
    data-testid="1,1"
    role="cell"
  >
    5
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 7`] = `
<DocumentFragment>
  <div
    class="css-1p3ion3"
    data-testid="1,1"
    role="cell"
  >
    6
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 8`] = `
<DocumentFragment>
  <div
    class="css-1p48vha"
    data-testid="1,1"
    role="cell"
  >
    7
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 9`] = `
<DocumentFragment>
  <div
    class="css-1u4dma6"
    data-testid="1,1"
    role="cell"
  >
    8
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 10`] = `
<DocumentFragment>
  <div
    class="css-2p5s76"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-3tubcw"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 11`] = `
<DocumentFragment>
  <div
    class="css-so49sq"
    data-testid="1,1"
    role="cell"
  />
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 12`] = `
<DocumentFragment>
  <div
    class="css-so49sq"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-1w1u3hh"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Cell renders correctly 13`] = `
<DocumentFragment>
  <div
    class="css-so49sq"
    data-testid="1,1"
    role="cell"
  >
    <div
      class="css-1wbzzpj"
    />
  </div>
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 2`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 3`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 4`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 5`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 6`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 7`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 8`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 9`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 10`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 11`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 12`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;

exports[`Cell component check Closed Frame renders correctly 13`] = `
<DocumentFragment>
  <div
    class="css-j032ne"
  />
</DocumentFragment>
`;
